Produzione/force-app/main/default/objects/Raggruppamento__c/fields/Area_Permessi_Visualizzazione__c.field-meta.xml
<CustomField>
    <fullName>Area_Permessi_Visualizzazione__c</fullName>
    <label>Area Permessi Visualizzazione</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Permessi_Visualizzazione</valueSetName>
    </valueSet>
</CustomField>