Produzione/force-app/main/default/objects/Raggruppamento__c/fields/Azienda_Permessi_Visualizzazione__c.field-meta.xml
<CustomField>
    <fullName>Azienda_Permessi_Visualizzazione__c</fullName>
    <description>Specifica a quale azienda appartiene il raggruppamento, di modo che in base all&apos;utente possano essere filtrati</description>
    <inlineHelpText>Specifica a quale azienda appartiene il raggruppamento, di modo che in base all&apos;utente possano essere filtrati</inlineHelpText>
    <label>Azienda Permessi Visualizzazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aziende_Permessi_Visualizzazione</valueSetName>
    </valueSet>
</CustomField>