Produzione/force-app/main/default/objects/Raggruppamento__c/fields/Etichetta_EN__c.field-meta.xml
<CustomField>
    <fullName>Etichetta_EN__c</fullName>
    <label>Etichetta EN</label>
    <type>TextArea</type>
</CustomField>