Produzione/force-app/main/default/objects/Raggruppamento__c/fields/Etichetta_Genitore__c.field-meta.xml
<CustomField>
    <fullName>Etichetta_Genitore__c</fullName>
    <formula>Genitore__r.Etichetta_IT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etichetta Genitore</label>
    <type>Text</type>
</CustomField>