Produzione/force-app/main/default/objects/Raggruppamento__c/fields/Etichetta_Ridotta_EN__c.field-meta.xml
<CustomField>
    <fullName>Etichetta_Ridotta_EN__c</fullName>
    <description>Etichetta ridotta per dealer map</description>
    <inlineHelpText>Etichetta ridotta per dealer map</inlineHelpText>
    <label>Etichetta Ridotta EN</label>
    <type>TextArea</type>
</CustomField>