Produzione/force-app/main/default/objects/Raggruppamento__c/fields/Genitore__c.field-meta.xml
<CustomField>
    <fullName>Genitore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raggruppamento</label>
    <referenceTo>Raggruppamento__c</referenceTo>
    <relationshipLabel>Raggruppamenti</relationshipLabel>
    <relationshipName>Raggruppamenti</relationshipName>
    <type>Lookup</type>
</CustomField>