Produzione/force-app/main/default/objects/Raggruppamento__c/fields/No_Trend__c.field-meta.xml
<CustomField>
    <fullName>No_Trend__c</fullName>
    <label>No Trend</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>