Produzione/force-app/main/default/objects/Raggruppamento__c/fields/Peso_Genitore__c.field-meta.xml
<CustomField>
    <fullName>Peso_Genitore__c</fullName>
    <label>Peso Genitore</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>