Produzione/force-app/main/default/objects/Raggruppamento__c/fields/Tipologia_Grafico__c.field-meta.xml
<CustomField>
    <fullName>Tipologia_Grafico__c</fullName>
    <label>Tipologia Grafico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Distribuzione Frequenza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>