Produzione/force-app/main/default/objects/Raggruppamento__c/fields/Visualizzabile_da_manager_in__c.field-meta.xml
<CustomField>
    <fullName>Visualizzabile_da_manager_in__c</fullName>
    <label>Visualizzabile da manager in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Dashboard</fullName>
            </value>
            <value>
                <fullName>Business Insight</fullName>
            </value>
            <value>
                <fullName>Business with TMI Dashboard</fullName>
            </value>
            <value>
                <fullName>Dealer Map</fullName>
            </value>
            <value>
                <fullName>Dealer Motivation Dashboard</fullName>
            </value>
            <value>
                <fullName>Dealer Motivation Insight</fullName>
            </value>
            <value>
                <fullName>More Results</fullName>
            </value>
            <value>
                <fullName>Motivation Dashboard</fullName>
            </value>
            <value>
                <fullName>Motivation Insight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>